# rustybrain

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs  reward_normalizer.rs
src/bandit/: epsilon_greedy.rs  ucb1.rs
src/metrics/: reward_tracker.rs
src/optimizer/: mod.rs
src/service/: bandit_api.rs  mod.rs  optimizer_api.rs  rest_bandit.rs  training_api.rs
tests/: bandit_api_test.rs  bandit_epsilon_test.rs  bandit_ucb1_test.rs  optimizer_hill_test.rs  rest_bandit_test.rs  reward_normalizer_test.rs  reward_tracker_test.rs  training_api_test.rs
