[package]
name = "rustybrain"
version = "0.1.0"
edition = "2021"
description = "Lightweight AI systems toolkit in Rust — focused on test-driven ML infrastructure."
license = "MIT"

[dependencies]
axum = "0.7"
tokio = { version = "1.48", features = ["macros", "rt-multi-thread", "process"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
rand = "0.8"
    
[dev-dependencies]
approx = "0.5"
tower = "0.5"
hyper = "1"